--- a/proyecto-aprender-4.0/package.json
+++ b/proyecto-aprender-4.0/package.json
@@ -19,7 +19,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.3",
     "eslint": "^9.35.0",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "typescript": "^5.9.3"
   }
 }
